--- a/Neural_Style_Transfer/requirements.txt
+++ b/Neural_Style_Transfer/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.35.0
+streamlit
 transformers==4.41.2
 torch==2.8.0
 PyPDF2
@@ -6,3 +6,4 @@ tensorflow==2.20.0
 tensorflow-hub==0.14.0
 Pillow==10.4.0
 numpy<2.0.0
+
